--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -169,7 +169,7 @@
             <div class="container">
                 <p class="contact-txt" itemscope itemtype="http://schema.org/Person">
                     Pour tout renseignement :<br>
-                    <span itemprop="name">Jérémy DUTHEIL</span> - <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
+                    <span itemprop="name">Jérémy Dutheil</span> - Accordéoniste à Paris <br> <a href="mailto:dutheil.jeremy@gmail.com" style="color: #ffffff" itemprop="email">dutheil.jeremy@gmail.com</a> - <span itemprop="telephone">06.85.38.22.16</span><br>
                 </p>
 
                 <p class="contact-txt" style="margin-top: 10px;">
