--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -30,7 +30,7 @@
 						<h1 class="section-title">Accordéoniste à Paris</h2>
 
 						<p>
-							Jérémy Dutheil est <strong><a style="color: #555555;" href="{{ path('accordeoniste') }}">un accordéoniste français</a></strong> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
+							Jérémy Dutheil est <a href="{{ path('accordeoniste') }}">un accordéoniste français</a> complet abordant un large univers musical, original et résolument moderne. De la <em class="text-link">guinguette</em> au <em class="text-link">rock oriental</em>, en passant par la <em class="text-link">chanson française</em> ou encore le <em class="text-link">jazz et jazz manouche</em>, cet artiste polyvalent et passionné aime toucher à tous les styles.
 						</p>
 
 						<p>
@@ -38,7 +38,7 @@
 						</p>
 
 						<p>
-							Seul ou <em class="text-link">en groupe</em>, Jérémy se produit sur scène dans toute la France, ainsi que dans certains lieux plus intimistes de la capitale.
+							Même s'il est accordéoniste à Paris, Jérémy se produit sur scène dans toute la France, seul ou en groupe.
 						</p>
 
 						<p>
@@ -76,7 +76,7 @@
 						</p>
 
 						<p class="txt--blank">
-							À <a style="color: #ffffff;" href="{{ path('soirees_paris') }}">Paris</a> et dans la France entière, différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a style="color: #ffffff;" href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
+							Je suis <a href="{{ path('soirees_paris') }}">accordéoniste à Paris</a> mais me produis dans la France entière. Différentes formules sont disponibles et de nombreuses options sont discutables en amont de la prestation : acoustique ou sonorisé, styles abordés, ... Suivant vos envies et votre budget, je peux venir <a href="{{ path('accordeoniste_soiree') }}">en solo</a> ou accompagné par d'autres musiciens ; lors d'un mariage ou d'une soirée privée, on appréciera tout particulièrement le <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple. J'accompagne également plusieurs chanteuses, avec lesquelles nous proposons des répertoires autour de la chanson française ; un duo très apprécié pour vos anniversaires, ou dans les maisons de retraite (EHPAD, ...) !
  						</p>
 
 						<p>
@@ -145,7 +145,7 @@
 					</p>
 
 					<p class="txt--blank">
-						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}" style="color: #ffffff;">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">musiciens pour vos soirées</a>).
+						Certain de ces ensembles de musiciens se destinent plus particulièrement à l'animation de vos événements (mariage, anniversaire, soirée privée..), comme notre <a href="{{ path('manouche') }}">groupe de jazz manouche</a>, par exemple (voir aussi l'ensemble de nos <a href="{{ path('musiciens_soirees') }}" style="color: #ffffff;">musiciens pour vos soirées</a>).
 					</p>
 
 					<p>
