--- a/templates/pages/accordeoniste.html.twig
+++ b/templates/pages/accordeoniste.html.twig
@@ -37,7 +37,7 @@
             </p>
 
             <p>
-                Ouvert à toute collaboration (projet théâtral, accompagnement chanteur / chanteuse, enregistrement), Jérémy est un accordéoniste disponible ; n'hésitez pas à <a href="{{ path('contact') }}">le contacter</a> pour toute proposition.
+                Ouvert à toute collaboration (projet théâtral, accompagnement chanteur / chanteuse, enregistrement), Jérémy est un accordéoniste à Paris disponible ; n'hésitez pas à <a href="{{ path('contact') }}">le contacter</a> pour toute proposition.
             </p>
 
             <h2 class="section-title">Extraits musicaux</h2>
@@ -57,7 +57,7 @@
             </div>
 
             <p>
-                <a href="{{ path('videos') }}" class="btn btn-primary">Voir plus de vidéos</a>
+                <a style="margin-top: 15px;" href="{{ path('videos') }}" class="btn btn-primary">Voir plus de vidéos</a>
             </p>
         </div>
     </section>
