--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -26,6 +26,10 @@
 			</p>
 
 			<p>
+				Pour voir les projets plutôt dédiés à <strong>l'animation de votre mariage, soirée ou événement</strong>, merci de consulter la page dédiée : <a href="{{ path('animations') }}">Événementiel</a>.
+			</p>
+
+			<p>
 				Toujours intéressé par d'autres découvertes, je suis <strong>disponible</strong> et <strong>ouvert</strong> à de nouvelles propositions ; que vous soyez une <strong>troupe de théâtre</strong> cherchant un accompagnateur, un <strong>groupe</strong> cherchant son nouvel accordéoniste ou encore tout artiste avec un projet musical, n'hésitez pas à <a href="#" class="text-link">me contacter</a> pour en discuter.
 			</p>
 
