--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour tous vos événements - avec accordéon
+	Groupe jazz manouche pour vos événements (mariage, soirée, cocktail)
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre vin d'honneur, soirée privée ou cocktail d'entreprise ? Musiciens professionnels, découvrez nos formules.">
+	<meta name="description" content="Vous cherchez un groupe de jazz manouche pour votre événement (mariage, soirée privée, cocktail d'entreprise) ? Musiciens professionnels, découvrez nos formules.">
 {% endblock %}
 
 {% block body %}
@@ -19,28 +19,53 @@
 
 	<section class="content-section bg--blank page-section">
 		<div class="container bg--blank">
-			<h1 class="section-title">Groupe jazz manouche pour vos événements</h1>
+			<h1 class="section-title">
+				Groupe jazz manouche pour vos événements <br>
+				<small>Orchestre sur mesure, musique de qualité</small>
+			</h1>
 
             <p>
-                Vous recherchez un groupe de <strong>jazz manouche</strong> pour votre <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ?
+                Vous recherchez un <strong>groupe de jazz manouche</strong> pour votre <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariage</a>, anniversaire, cocktail d'entreprise ou tout autre événement ? Vous avez fait le tour des sites pour la <strong>recherche de musiciens</strong> et ne savez pas qui choisir ? Vous êtes au bon endroit ! <strong>Musiciens professionnels</strong> et expérimentés, nous vous proposons différentes formules (sur mesure) pour une animation musicale de qualité lors de votre événement.
 			</p>
 
 			<p>
-				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre groupe de musiciens professionnels, au son des standards du style popularisé par Django Reinhardt. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
+				Pour tout renseignement, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a>.
+			</p>
+
+			<h2 class="section-title section-title--small">Votre événement</h2>
+
+			<p>
+				L'organisation d'un événement n'est jamais chose facile, d'autant que le temps manque souvent. Régler les derniers préparatifs d'un mariage, s'assurer d'une soirée d'entreprise réussie, définir le thème d'une soirée privée... Autant d'éléments stressants qu'il vous faut gérer, et qui s'avèrent parfois compliqués.
 			</p>
 
 			<p>
-				Afin de s'adapter au mieux à vos envies et votre budget, nous proposons <strong>différentes formules</strong> (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}" style="color: #000000;">accordéoniste jazz manouche</a> bien sûr !) à partir du duo (voir ci-dessous) ; nous sommes également complètement autonomes en matériel de sonorisation. Nous nous occupons de tout, vous n'avez plus qu'à apprécier !
+				Trouver un <strong>groupe de musique</strong> peut se révéler une tâche chronophage ; à l'heure d'internet, les propositions sont nombreuses et il est difficile de faire un choix. En tant que professionnels expérimentés, notre but est de vous <strong>faciliter</strong> toutes ces démarches ; nous pouvons prendre en charge l'animation musicale de votre soirée de A à Z. Nous vous proposons ici différentes formules types (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> bien sûr !), que vous pouvez modifier à votre guise pour créer votre <strong>orchestre jazz manouche</strong> sur mesure. Bien entendu, nous vous conseillerons en fonction du lieu que vous avez choisi, du nombre de personnes attendues à votre événement et de votre budget.
 			</p>
 
 			<p>
-				N'hésitez plus et <a href="{{ path('contact') }}">contactez-nous</a> pour plus d'informations.
+				Autonomes en matériel de sonorisation, notre <strong>groupe de jazz manouche</strong> prend également en charge la totalité de l'aspect technique ; vous n'avez plus qu'à apprécier votre soirée en profitant d'une musique d'ambiance chic et élégante.
 			</p>
 
-            <h2 class="section-title section-title--small">Duo jazz manouche (accordéon / guitare)</h2>
+			<h2 class="section-title section-title--small">Le jazz manouche</h2>
 
-            <p>
-				En duo avec l'excellent guitariste Solal Poux, nous vous proposons une formule facile à mettre en place, convenant aux lieux les plus intimistes (et budgets modestes). En acoustique ou légèrement sonorisé, nous assurons le déroulement musical de votre soirée dans une ambiance chic et élégante ; alternant les morceaux virtuoses et les balades langoureuses, le répertoire est varié et plaira à tous !
+			<p>
+				Retrouvez l'ambiance des années 30 lors de votre soirée avec notre <strong>orchestre jazz manouche</strong>, au son des standards du style popularisé par Django Reinhardt et Stéphane Grappelli. La guitare se fait tantôt rythmique, tantôt soliste, la contrebasse enchaîne les <i>walking bass</i>, l'accordéon s'envole par moments.. Le jazz manouche, musique virtuose s'il en est, apportera à votre réception une touche <i>vintage</i>, mais surtout très chic.
+			</p>
+
+			<p>
+				Vous avez forcément déjà entendu des morceaux comme <i>Minor Swing</i> ou <i>Les Yeux Noirs</i> ; intemporels, ils sont repris encore aujourd'hui dans presque tous les concerts de <strong>jazz manouche</strong>. Mais connaissez-vous des airs moins entendus, comme <i>Anniversary Song</i> ou <i>Lulu Swing</i> ? Notre répertoire balaie le style jazz manouche, des grands standards aux morceaux plus traditionnels et moins connus ; nous faisons également quelques incursions dans le jazz plus "classique", avec par exemple des reprises de Charlie Parker (<i>Billie's Bounce</i>, <i>Donna Lee</i>) ou Duke Ellington (<i>It don't mean a thing</i>, <i>Caravan</i>).
+			</p>
+
+			<h2 class="section-title section-title--small">Nos groupes de jazz manouche pour vos événements</h2>
+
+            <h3 class="section-title section-title--smaller">Duo jazz manouche (accordéon / guitare)</h3>
+
+			<p>
+				Le duo jazz manouche est la formule intimiste par excellence ! L'accordéon et la guitare étant tous deux des instruments rythmiques et solistes, vous avez ici l'essence du jazz manouche sans aucun superflu. Les rôles s'alternent au sein des morceaux, et les solos s'enchaînent avec une grande dynamique.
+			</p>
+
+			<p>
+				Acoustique ou sonorisé, les conditions techniques sont réduites au minimum ; plus facile à accueillir qu'un <strong>orchestre jazz manouche</strong>, notre duo trouvera très facilement sa place dans les plus petits lieux. L'ambiance musicale de votre soirée n'en restera pas moins très classe et élégante, alternant les balades langoureuses et les morceaux virtuoses.
 			</p>
 
             <div class="row">
@@ -66,10 +91,14 @@
 				</div>
 			</div>
 
-            <h2 class="section-title section-title--small">Trio jazz manouche (accordéon / guitare / contrebasse)</h2>
+            <h3 class="section-title section-title--smaller">Trio jazz manouche (accordéon / guitare / contrebasse)</h3>
 
 			<p>
-				Le duo s'enrichit d'une contrebasse, permettant une assise plus solide de la rythmique ; l'instrument apporte également une touche visuelle non négligeable pour l'ambiance !
+				Parmi nos <strong>groupes de jazz manouche</strong>, c'est la formule la plus courante et la plus "passe partout" ; la contrebasse vient ajouter une assise rythmique plus solide au duo, laissant plus grande liberté aux deux autres instrumentistes. Le trio reste facile et pratique à mettre en place pour votre événement, les conditions techniques étant limitées tout comme l'espace nécessaire.
+			</p>
+
+			<p>
+				On notera égalent l'apport visuel de la contrebasse (non négligeable), instrument emblématique du jazz manouche !
 			</p>
 
             <div class="row">
@@ -79,15 +108,27 @@
 					</div>
 
                     <p class="text-center" style="margin-top: 15px;">
-                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, Fly me to the Moon
+                        Quelques extraits en trio jazz manouche : Bossa Dorado, Autumn Leaves, All of Me, All the things you are, Fly me to the Moon
                     </p>
                 </div>
             </div>
 
-            <h2 class="section-title section-title--small" style="margin-top: 15px;">Quartet et plus</h2>
+            <h3 class="section-title section-title--smaller" style="margin-top: 15px;">Quartet et plus</h3>
+
+			<p>
+				Vous cherchez un <strong>groupe de jazz manouche</strong> plus conséquent pour <strong>votre événement</strong> ? Nous proposons également des prestations en <strong>quartet</strong> et avec orchestre plus complet encore.
+			</p>
+
+			<p>
+				Le premier instrument que nous conseillons est une <strong>seconde guitare</strong> qui assurera la rythmique ; <i>la pompe</i> est en effet un élément incontournable du jazz manouche. Grâce aux deux guitaristes, vous l'entendrez en permanence, même pendant les solos de guitare !
+			</p>
+
+			<p>
+				À partir de 5 personnes, on peut commencer à ajouter d'autres instruments mélodiques : violon (très présent dans le jazz manouche), saxophone, ... Suivant vos envies et vos goûts, toujours ! Pourquoi ne pas prendre une chanteuse de jazz également ?
+			</p>
 
             <p>
-                Nous pouvons également venir à 4 ou plus : ajout d'une seconde guitare rythmique pour plus de punch, arrivée d'un violon pour d'autres possibilités mélodiques, une chanteuse pour les thèmes, ... Ce ne sont que des exemples, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
+                Bien sûr ce ne sont que des exemples, n'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour établir une formule sur mesure pour votre événement.
             </p>
 
             <h2 class="section-title section-title--small">Quelques titres du répertoire</h2>
@@ -106,7 +147,15 @@
                 </li>
 
 				<li>
+					Danube (Anniversary Song)
+				</li>
+
+				<li>
 					Indifférence
+				</li>
+
+				<li>
+					Lulu Swing
 				</li>
 
                 <li>
@@ -117,6 +166,10 @@
                     Nuages
                 </li>
 
+				<li>
+					Manoir de mes Rêves
+				</li>
+
                 <li>
                     All of Me
                 </li>
@@ -124,6 +177,26 @@
                 <li>
                     Autumn Leaves
                 </li>
+
+				<li>
+					Them there eyes
+				</li>
+
+				<li>
+					Blues mineur
+				</li>
+
+				<li>
+					Daphné
+				</li>
+
+				<li>
+					Cherokee
+				</li>
+
+				<li>
+					I can't give you anything but love
+				</li>
 
 				<li>
 					Made in France
