--- a/templates/anims/accordeoniste-mariages.html.twig
+++ b/templates/anims/accordeoniste-mariages.html.twig
@@ -22,7 +22,11 @@
 			<h1 class="section-title">Accordéoniste pour votre mariage</h1>
 
 			<p>
-				Accordéoniste professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> lors de votre mariage et me déplace dans la France entière ; les formules et le répertoire sont variés, en accord avec vos envies (vin d'honneur, soirée, ...). <br>
+				Vous êtes à la recherche d'un <strong>accordéoniste pour votre mariage</strong> ?
+			</p>
+
+			<p>
+				Musicien professionnel basé à Paris (Ile de France), je suis disponible pour des <strong>animations musicales</strong> lors de votre mariage et me déplace dans la France entière ; les formules et le répertoire sont variés, en accord avec vos envies (vin d'honneur, soirée, ...). <br>
 				Fort d'une expérience musicale conséquente, je vous propose un répertoire <strong>varié</strong> parcourant tous les styles et toutes les générations ; du musette au jazz, en passant par la chanson française et le tango, il y en aura pour <strong>tous les goûts</strong>.
 			</p>
 
@@ -46,10 +50,6 @@
 					<p>
 						De Django Reinhardt à Edith Piaf, en passant par Charlie Parker ou encore Charles Aznavour, laissez vous emporter par des mélodies si souvent entendues ! Peu fréquent, l'accordéon apportera de plus une touche d'originalité à votre événement, qui restera gravé dans les mémoires !
 					</p>
-
-					<p>
-						<a class="btn btn-primary" href="{{ path('accordeoniste_soiree') }}">Plus d'informations</a>
-					</p>
 				</div>
 
 				<div class="col-md-4">
@@ -68,6 +68,26 @@
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 class="section-title section-title--small">Ambiance guinguette pour votre mariage</h2>
+
+			<p>
+				Vous cherchez plutôt une ambiance <i>rétro</i> pour l'animation musicale de votre mariage ? Très à la mode, le thème <strong>guinguette</strong> revient en force aujourd'hui dans tout type d'événement, et notamment les mariages. Plongez dans l'univers des années 30 à 50, avec une musique d'ambiance chic proposée par l'accordéon ; des grands standards de la chanson française (Brel, Aznavour, Piaf, Trenet, ...) aux valses <i>swing</i> de Jo Privat ou Gus Viseur, en passant par quelques classiques <i>musette</i>.. Dépaysement assuré !
+			</p>
+
+			<div class="row" style="margin-top: 15px; margin-bottom: 15px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VVWMhc7LNcM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2ikPP4jTAfE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
