--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -234,7 +234,7 @@
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Votre événement sur mesure</h2>
 
 			<p>
-				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">me contacter</a> afin de discuter de votre soirée ! 
+				Toutes ces formules vous sont proposées à titre d'exemple ; pour votre événement, vous choisissez tout ! Le style musical, l'orientation du répertoire, les instruments présents (l'accordéon restant une constante ;) ), ... N'hésitez pas à <a href="{{ path('contact') }}" rel="nofollow">me contacter</a> afin de discuter de votre soirée !
 			</p>
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
@@ -259,7 +259,7 @@
 						Une formule discrète pour votre vin d'honneur ? Un repas en musique ? Une soirée au son du jazz manouche ?<br>
 					</p>
 
-					<a href="{{ path('animations_mariages') }}" class="btn btn-primary">En savoir plus</a>
+					<a href="{{ path('groupe_musique_mariage') }}" class="btn btn-primary">En savoir plus</a>
 				</div>
 
 				<div class="col-sm-6 col--mbot">
