--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -181,6 +181,8 @@
                 <hr style="background-color: #ffffff;">
 
                 <p class="text-center" style="font-size: 14px; ">
+                    <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}" rel="nofollow">Mentions légales</a> - <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}" style="color: #ffffff;">Groupe de jazz manouche pour votre mariage</a> - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('animations') }}" style="color: #ffffff;">Toutes les animations musicales</a><br>
+                    - <br>
                     Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank" title="Réparation / Accordage accordéons en Ile de France">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
                 </p>
             </div>
