--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -136,7 +136,7 @@
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                    <a class="nav-link {% if route == '/blog' %}nav-link--active{% endif %}" href="/blog">Blog</a>
+                            <a class="nav-link {% if route == '/blog' %}nav-link--active{% endif %}" href="/blog/">Blog</a>
                         </li>
 
                         {% if app.user %}
