--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -121,18 +121,18 @@
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link {% if route == 'manouche' %}nav-link--active{% endif %}" href="{{ path('manouche') }}" title="Groupe de jazz manouche pour votre soirée">Jazz manouche</a>
+                            <a class="nav-link {% if route == 'manouche' %}nav-link--active{% endif %}" href="{{ path('manouche') }}" title="Groupe de jazz manouche pour votre soirée"> Groupe jazz manouche</a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
                             <a class="nav-link {% if route == 'animations' %}nav-link--active{% endif %}"
-                                href="{{ path('animations') }}" title="Trouver un musicien ou groupe de musique pour votre soirée">
-                                Événementiel
+                                href="{{ path('animations') }}" title="Trouver un musicien ou groupe de musique pour votre soirée (mariage, cocktail, événement)">
+                                Vos événements
                             </a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
-                            <a class="nav-link {% if route == 'contact' %}nav-link--active{% endif %}" href="{{ path('contact') }}">Contact</a>
+                            <a class="nav-link {% if route == 'contact' %}nav-link--active{% endif %}" href="{{ path('contact') }}" title="Me contacter">Contact</a>
                         </li>
 
                         <li class="nav-item px-2 py-1">
