--- a/templates/anims/accordeoniste-mariages.html.twig
+++ b/templates/anims/accordeoniste-mariages.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Un accordéoniste chic pour votre mariage : jazz, chanson française, ...
+	Un accordéoniste chic pour votre mariage : jazz, chanson française.
 {% endblock %}
 
 {% block metadesc %}
