--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Animation musicale à l'accordéon pour seniors | Jérémy Dutheil
+	Animation musicale à l'accordéon pour seniors - Ile de France
 {% endblock %}
 
 {% block metadesc %}
