--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,11 +25,11 @@
         <meta name="p:domain_verify" content="e81b1a9f19c14f139ea5655c3bee3b3d"/>
 
         <title>
-            {% block title %}Accordéoniste à Paris | Jérémy Dutheil | Musicien professionnel{% endblock %}
+            {% block title %}Accordéoniste à Paris - Musicien professionnel - Jazz - Chanson{% endblock %}
         </title>
 
         {% block metadesc %}
-            <meta name="description" content="Accordéoniste à Paris disponible seul ou en groupe pour concerts et événements (mariages, soirées, cocktails ...).">
+            <meta name="description" content="Accordéoniste à Paris, Jérémy Dutheil est disponible seul ou en groupe pour concerts et événements (mariages, soirées, cocktails). Répertoire jazz et chanson.">
         {% endblock %}
 
         <meta property="og:title" content="Accordéoniste professionnel, Paris | Jérémy Dutheil">
