--- a/templates/pages/accordeon_jazz_manouche.html.twig
+++ b/templates/pages/accordeon_jazz_manouche.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Accordéoniste jazz manouche | Jérémy Dutheil
+    Accordéoniste jazz manouche - Paris - Ile de France
 {% endblock %}
 
 {% block metadesc %}
