--- a/templates/pages/accordeoniste.html.twig
+++ b/templates/pages/accordeoniste.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Accordéoniste professionnel | Jérémy Dutheil
+    Accordéoniste professionnel - Paris - Jazz et chanson
 {% endblock %}
 
 {% block metadesc %}
