--- a/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
+++ b/templates/pages/groupe_jazz_manouche_mariage_paris.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Groupe jazz manouche pour votre mariage ! (Vin d'honneur, repas, ...)
+	Groupe jazz manouche pour votre mariage : vin d'honneur, repas, ...
 {% endblock %}
 
 {% block metadesc %}
