--- a/templates/pages/soirees_paris.html.twig
+++ b/templates/pages/soirees_paris.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accordéoniste pour vos soirées à Paris | Jérémy Dutheil{% endblock %}
+{% block title %}Accordéoniste pour vos soirées à Paris - Jazz et chanson{% endblock %}
 {% block metadesc %}
-    <meta name="description" content="Accordéoniste professionnel, Jérémy Dutheil est disponible pour l'animation de vos soirées à Paris : cocktail, inauguration, repas en musique, ...">
+    <meta name="description" content="Accordéoniste professionnel, Jérémy Dutheil est disponible pour l'animation musicale de vos soirées à Paris : cocktail, inauguration, repas en musique.">
 {% endblock %}
 
 {% block body %}
