--- a/templates/pages/videos.html.twig
+++ b/templates/pages/videos.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Accordéoniste, Paris | Jérémy Dutheil | Vidéos
+	Accordéoniste - Paris - Vidéos - Jazz, Jazz manouche, Chanson
 {% endblock %}
 
 {% block metadesc %}
-    <meta name="description" content="Quelques vidéos Youtube autour de l'accordéon, pour découvrir ma musique...">
+    <meta name="description" content="Jérémy Dutheil est accordéoniste professionnel à Paris. Découvrez ici des extraits vidéos : solo accordéon jazz, avec un groupe de jazz manouche et en duo chanson.">
 {% endblock %}
 
 {% block body %}
