--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour soirées - avec accordéoniste | Jérémy Dutheil
+	Musiciens pour soirées - Avec accordéoniste - Orchestre sur mesure
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... déplacements dans toute la France !">
+	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... notre orchestre sur mesure se déplace dans toute la France !">
 {% endblock %}
 
 {% block body %}
