--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musique pour événementiel - Mariage, soirée, cocktail...
+	Musiciens pour vos événements - Mariage - Soirée - Cocktail
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez un accordéoniste ou un groupe de musiciens pour votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... déplacements dans toute la France !">
+	<meta name="description" content="Vous cherchez un groupe de musiciens pour votre événement (mariage, soirée, cocktail) ? Groupe jazz manouche, duos chanson, ... déplacements dans toute la France !">
 {% endblock %}
 
 {% block body %}
@@ -22,11 +22,14 @@
 			<h1 class="section-title">Événementiel et animations musicales</h1>
 
 			<p>
-				Jérémy DUTHEIL vous propose avec son accordéon des formules sur mesures pour <strong>l'animation musicale</strong> de votre cocktail, fête ou soirée d'entreprise ; seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement.
+				Accordéoniste professionnel, Jérémy Dutheil vous propose des formules sur mesures pour <strong>l'animation musicale</strong> de votre  événement : cocktail, fête, vin d'honneur, soirée d'entreprise. Seul ou accompagné d'autres <strong>musiciens</strong>, dans un style plutôt moderne ou <strong>rétro</strong>, il saura combler vos invités en s'adaptant à leurs envies (et les votres !). Musicien professionnel avec de l'expérience, le répertoire proposé est varié et personnalisé pour votre événement. Jérémy évolue plus particulièrement dans les styles musicaux <strong>jazz</strong> (manouche) et <strong>chanson française</strong>.
 			</p>
 
 			<p>
-				Destinées à tout type de public, ces formules s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em> ; grâce aux qualités acoustique de l'instrument, les conditions techniques sont réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire. Pour de plus grands espaces, pas d'inquiétude : Jérémy DUTHEIL (et ses musiciens) sont <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu.
+				Nos formules étant destinées à tout type de public, ces groupes de musiciens s'adressent aussi bien aux <em>particuliers</em> qu'aux <em>professionnels</em>. Grâce aux qualités acoustique de l'accordéon (et des autres instruments pour les orchestres), les conditions techniques sont souvent réduites au minimum. En effet, la plupart du temps, la sonorisation n'est pas nécessaire.
+			</p>
+			<p>
+				Pour de plus grands espaces, pas d'inquiétude : Jérémy Dutheil (et ses musiciens) sont complètement <strong>autonomes</strong> et installeront un système de diffusion adapté à votre lieu. Professionnels avertis, ils gèrent l'organisation de l'<strong>animation musicale de votre soirée</strong> de A à Z.
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 25px;">Accordéon solo pour une ambiance discrète</h2>
@@ -133,6 +136,10 @@
 				Le jazz manouche est le style musical par excellence pour l'événementiel : musique virtuose mais toutefois discrète, elle s'intègrera parfaitement dans l'ambiance de votre cocktail d'entreprise ou votre vernissage d'exposition, par exemple. Musiciens professionnels, nous prenons en charge l'aspect technique et la sonorisation (si nécessaire), de manière autonome ; nous proposons des formules du <strong>duo</strong> au <strong>quintet</strong>, dont voici ci-dessous quelques extraits.
 			</p>
 
+			<p>
+				Nous intervenons également très régulièrement lors de <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}">mariages</a>, au vin d'honneur par exemple.
+			</p>
+
 			<div class="row">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
@@ -159,7 +166,7 @@
 
 			<h3 class="section-title section-title--smaller">Marjolaine Piémont</h3>
 
-			<img style="display: block; max-width: 50%; margin: auto; margin-bottom: 15px;" src="img/marjolaine.jpg" alt="Marjolaine Piémont">
+			<img style="display: block; max-width: 50%; margin: auto; margin-bottom: 15px;" src="img/marjolaine.jpg" alt="Marjolaine Piémont - Duos accordéon / voix">
 
 			<p>
 				J'ai la chance de travailler avec Marjolaine Piémont, personnalité bien ancrée dans la scène française ; notamment connue pour ses participations à <strong>Mozart l'Opéra Rock</strong> ou <strong>Sol en Cirque</strong>, Marjolaine poursuit également une carrière sous son propre nom, qui l'a mené entre autres aux premières partie de Zazie en 2016, et à plusieurs tournées au Japon.
@@ -302,6 +309,39 @@
 					<!--<a href="#" class="btn btn-primary">En savoir plus</a>-->
 				</div>
 			</div>
+
+			<hr style="background-color: #2d2d2d; margin: 25px 0;">
+
+			<h2 class="section-title section-title--small">Questions / Réponses</h2>
+
+			<p>
+				<strong>Quelle est la durée d'une animation musicale ?</strong> <br>
+				La durée de notre animation dépend de vos envies, et de la formule retenue ; à titre indicatif, nous proposons en moyenne 2h de répertoire à l'accordéon solo, et 3h pour les autres formules (groupe jazz manouche, duos accordéon / voix). Les horaires sont bien entendu à discuter à l'avance.
+			</p>
+
+			<p>
+				<strong>Combien ça coûte ?</strong> <br>
+				Le prix peut varier en fonction de plusieurs critères : nombre de musiciens, horaires demandées, période de l'année, lieu de votre événement. Le plus simple reste de <a href="{{ path('contact') }}">nous contacter pour obtenir un devis</a>. <br>
+				Vous trouverez néanmoins quelques éléments de réponse en lisant l'article suivant : <a href="https://www.jeremy-dutheil.fr/blog/quel-est-le-tarif-dun-groupe-de-musique-pour-votre-soiree/">Quel est le tarif d'un groupe de musique pour votre soirée ?</a>
+			</p>
+
+			<p>
+				<strong>Quelles sont les démarches administratives ?</strong> <br>
+				Notre mode de fonctionnement préféré est <strong>le Guso</strong> ; il s'agit d'un service gratuit mis en place par l'état, afin de permettre l'embauche de musiciens de manière simplifiée. Nous vous accompagnons tout au long du processus, qui est très facile. Plus d'informations sur l'article suivant : <a href="https://www.jeremy-dutheil.fr/blog/comment-embaucher-un-musicien/">Comment embaucher un musicien ?</a> <br>
+				Si vous ne pouvez (ou ne souhaitez) pas passer par le Guso, nous pouvons établir un contrat et une facture par l'intermédiaire d'une boîte de production. Dans ce mode de fonctionnement, l'intermédiaire prend un pourcentage et la TVA est également appliquée ; nous devrons donc facturer 17% de frais supplémentaires.
+			</p>
+
+			<p>
+				<strong>Quels modes de règlement sont disponibles ?</strong> <br>
+				Nous acceptons les règlements par chèque ou virement bancaire ; payer en liquide n'est pas possible, désolé !
+			</p>
+
+			<p>
+				<strong>Où vous déplacez vous ?</strong> <br>
+				Nous sommes basés en région parisienne, mais nous déplaçons dans toute la France ; en fonction du lieu de votre événement, nous devrons facturer les frais de déplacements occassionnés. Il est parfois également nécessaire de prévoir un hébergement ; vous serez bien entendu prévenu dès l'établissement d'un devis.
+			</p>
+
+
 
 			<hr style="background-color: #2d2d2d; margin: 25px 0;">
 
