--- a/templates/anims/seniors.html.twig
+++ b/templates/anims/seniors.html.twig
@@ -34,7 +34,7 @@
 				N'hésitez pas à <a href="{{ path('contact') }}" class="text-link">me contacter</a> pour en discuter !
 			</p>
 
-			<h2 class="section-title section-title--small">Quelque extraits</h2>
+			<!--<h2 class="section-title section-title--small">Quelque extraits</h2>-->
 
 			<div class="row">
                 <div class="col-md-6">
