--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 			<img src="img/flash-item-1.jpg" alt="Accordéoniste en concert" title="Accordéoniste professionnel à Paris" class="flash-item__background">
 
 			<div class="flash-item__content mr-auto ml-5 col-sm-5">
-				<h2 class="flash-item__content-title">Musicien <br>pour vos événements</h1>
+				<p class="flash-item__content-title">Musicien <br>pour vos événements</p>
 
 				<p class="flash-item__content-text">
 					Vous cherchez un accordéoniste pour un mariage, un anniversaire, <br>une soirée d'entreprise ou une animation seniors à Paris, Ile de France ou dans toute la France ?
